@@ -1,6 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
-Mar-19-2010 patrick     Added support for Boost.Filesystem v3.
+May-15-2011 patrick     Added vrj::User::setHeadPosProxy().
+                        Submitted by Carsten Neumann.
+Mar-19-2011 patrick     Added support for Boost.Filesystem v3.
                         Submitted by Doug McCorkle.
 Feb-06-2011 patrick     Another vrj::Kernel::init() overload has been added.
                         This version accepts an int parameter, parserStyle,
